@@ -1,3 +1,7 @@
+29 Nov 2011: Wouter
+	- Fix bug where no IPv6 causes wrong test results, notably SSL, due
+	  to the error report code.
+
 13 Nov 2011: Wouter
 	- control unsafe shows the dialog popup again.
 
